# embedding-model-similarity

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  wsgi.py
owlergpt/: __init__.py
owlergpt/commands/: __init__.py  evaluate_ds.py  ingest_ds.py  move_collections.py
owlergpt/utils/: __init__.py  check_env.py  connect_to_source.py  dataset_folders.py  filter_collections.py  get_embedding_indices.py  json_loader.py  list_available_collections.py  metrics.py  plots.py
results/tables/arguana/cka/: arguana_256_0_25_top1_cka.csv
results/tables/arguana/jaccard/: arguana_256_0_25_top1000_jaccard.csv  arguana_256_0_25_top100_jaccard.csv  arguana_256_0_25_top10_jaccard.csv  arguana_256_0_25_top3_jaccard.csv  arguana_256_0_25_top50_jaccard.csv  arguana_256_0_25_top5_jaccard.csv
results/tables/arguana/rank/: arguana_256_0_25_top1000_rank.csv  arguana_256_0_25_top100_rank.csv  arguana_256_0_25_top10_rank.csv  arguana_256_0_25_top3_rank.csv  arguana_256_0_25_top50_rank.csv  arguana_256_0_25_top5_rank.csv
results/tables/covid/cka/: trec-covid_256_0_25_top1_cka.csv
results/tables/covid/jaccard/: trec-covid_256_0_25_top1000_jaccard.csv  trec-covid_256_0_25_top100_jaccard.csv  trec-covid_256_0_25_top10_jaccard.csv  trec-covid_256_0_25_top3_jaccard.csv  trec-covid_256_0_25_top50_jaccard.csv  trec-covid_256_0_25_top5_jaccard.csv
results/tables/covid/rank/: trec-covid_256_0_25_top1000_rank.csv  trec-covid_256_0_25_top100_rank.csv  trec-covid_256_0_25_top10_rank.csv  trec-covid_256_0_25_top3_rank.csv  trec-covid_256_0_25_top50_rank.csv  (+1 more)
(+39 files in other folders)
